--- a/wechat/src/main/webapp/xcview/css/apprentice/apprentice.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/apprentice.css
@@ -38,6 +38,7 @@ header{
 	position: fixed;
 	top: 0;
 	z-index: 1;
+	border-bottom: 1px solid #d8dde6;
 }
 /*师承头部结束*/
 
@@ -50,9 +51,21 @@ header{
 .main{
 	width: 100%;
 	background: #fff;
+	position: relative;
+    top: 0rem;
+    overflow: scroll;
+    height: 100%;
+	-webkit-overflow-scrolling1:touch;
+
+	overflow-x: hidden;
+/ overflow-y: auto; /
+touch-action: pan-y;
+-webkit-overflow-scrolling: touch;
+
 }
 .center{
 	width: 100%;
+	padding-bottom: 0.2rem;
 }
 .center ul li{
 	/*background: blue;*/
@@ -79,6 +92,7 @@ header{
 	font-size: 0.30rem;
 	padding-left: 0.26rem;
     padding-right: 0.26rem;
+    color: #333;
 }
 /*中间内容结束*/
 
@@ -137,3 +151,4 @@ header{
 	background-size: 0.38rem 0.4rem;
 }
 /*底部结束*/
+
