--- a/wechat/src/main/webapp/xcview/css/apprentice/invitation_card.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/invitation_card.css
@@ -23,7 +23,7 @@ li{
 body{
 	width: 100%;
 	height: 100%;
-	background: #000;
+	/*background: #000;*/
 }
 
 /*报名头部开始*/
@@ -134,6 +134,3 @@ header{
     width: 3rem;
     z-index: 99999999999;
 }
-
-
-
