[bug fix]fix 替换变量名称引入的bug

--- a/online-manager/src/main/webapp/bootstrap/assets/css/less/ace-rtl.less
+++ b/online-manager/src/main/webapp/bootstrap/assets/css/less/ace-rtl.less
@@ -288,14 +288,14 @@
  
  
  //page.inbox.less
- .xgMessage-navbar .messagebar-item-left ~ .nav-search {
+ .message-navbar .messagebar-item-left ~ .nav-search {
    left: auto;
  }
- .xgMessage-navbar .messagebar-item-right ~ .nav-search {
+ .message-navbar .messagebar-item-right ~ .nav-search {
    left: auto;
    right: 5px;
  }
- .xgMessage-navbar .messagebar-item-right ~ .nav-search {
+ .message-navbar .messagebar-item-right ~ .nav-search {
    right: 60px;
  }
  
