--- a/wechat/src/main/webapp/xcview/css/apprentice/apprentice.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/apprentice.css
@@ -20,6 +20,9 @@ li{
 .both{
 	clear: both;
 }
+body{
+	background: #f8f8f8;
+}
 
 /*师承头部开始*/
 header{
@@ -50,7 +53,7 @@ header{
 }
 .main{
 	width: 100%;
-	background: #fff;
+	/*background: #fff;*/
 	position: relative;
     top: 0rem;
     overflow: scroll;
@@ -70,10 +73,11 @@ touch-action: pan-y;
 .center ul li{
 	/*background: blue;*/
 	margin-bottom: 0.2rem;
+	background: #fff;
 }
 .apprentice_main{
 	width: 100%;
-	height: 4.06rem;
+	/*height: 4.06rem;*/
 	margin-bottom: 0.02rem;
 }
 .flat_patternmaking{
@@ -88,11 +92,12 @@ touch-action: pan-y;
 	margin-bottom: 0.2rem;
 }
 .main_title{
-	height: 0.84rem;
+	/*height: 0.84rem;*/
 	font-size: 0.30rem;
 	padding-left: 0.26rem;
     padding-right: 0.26rem;
     color: #333;
+    padding-bottom: 0.2rem;
 }
 /*中间内容结束*/
 
