--- a/wechat/src/main/webapp/xcview/css/live_paly.css
+++ b/wechat/src/main/webapp/xcview/css/live_paly.css
@@ -268,6 +268,9 @@ margin-top: -0.28rem;
 	word-wrap:break-word; 
 word-break:break-all; 
 }
+.wrap p{
+	line-height: 0.4rem;
+}
 .wrap p img{
 	/*width: 100%;*/
 	max-width: 7rem;
@@ -372,6 +375,9 @@ word-break:break-all;
 	word-wrap:break-word; 
 word-break:break-all; 
 	
+}
+.wrap1 p{
+	line-height: 0.4rem;
 }
 .wrap1 p img{
 	/*width: 100%;*/
