--- a/wechat/src/main/webapp/xcview/css/apprentice/inherited_introduction.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/inherited_introduction.css
@@ -231,6 +231,7 @@ header{
 	margin: 0 auto;
 	font-size: 0.26rem;
 	color: #666666;
+	line-height: 0.4rem;
 }
 /*大师简介结束*/
 
@@ -262,6 +263,7 @@ header{
 	margin: 0 auto;
 	font-size: 0.26rem;
 	color: #666666;
+	line-height: 0.4rem;
 }
 .apprentices_center img{
 	max-width: 6.98rem;
@@ -296,6 +298,7 @@ header{
 	margin: 0 auto;
 	font-size: 0.26rem;
 	color: #666666;
+	line-height: 0.4rem;
 }
 .disciple_center img{
 	max-width: 6.98rem;
@@ -330,6 +333,7 @@ header{
 	margin: 0 auto;
 	font-size: 0.26rem;
 	color: #666666;
+	line-height: 0.4rem;
 }
 .site_center p img{
 	max-width: 6.98rem;
