--- a/wechat/src/main/webapp/xcview/css/live_album.css
+++ b/wechat/src/main/webapp/xcview/css/live_album.css
@@ -278,6 +278,9 @@ textarea::-webkit-input-placeholder {
 	word-wrap:break-word; 
 	word-break:break-all; 
 }
+.wrap p{
+	line-height: 0.4rem;
+}
 .wrap p img{
 	max-width: 7rem;
 }
@@ -356,6 +359,9 @@ textarea::-webkit-input-placeholder {
 	padding-bottom: 0.2rem;
 	word-wrap:break-word; 
 	word-break:break-all; 
+}
+.wrap1 p{
+	line-height: 0.4rem;
 }
 .wrap1 p img{
 	/*width: 100%;*/
