--- a/wechat/src/main/webapp/xcview/css/live_select_aibum.css
+++ b/wechat/src/main/webapp/xcview/css/live_select_aibum.css
@@ -378,6 +378,9 @@ overflow: hidden;
 	word-wrap:break-word; 
 word-break:break-all; 
 }
+.wrap p{
+	line-height: 0.4rem;
+}
 .wrap p img{
 	/*width: 100%;*/
 	max-width: 7rem;
@@ -462,6 +465,9 @@ word-break:break-all;
 	padding-bottom: 0.2rem;
 	word-wrap:break-word; 
 word-break:break-all; 
+}
+.wrap1 p{
+	line-height: 0.4rem;
 }
 .wrap1 p img{
 	/*width: 100%;*/
