师承--提交报名页-文本域删除-右下角拉扯。师承详情，简介增加图片箭头提示。

--- a/wechat/src/main/webapp/xcview/css/apprentice/apply.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/apply.css
@@ -260,6 +260,7 @@ header{
     min-height: 1.68rem;
     border: none;
     font-size: 0.28rem;
+    resize: none;
 }
 /* .learning_experience input{
 	width: 5.5rem;
@@ -291,6 +292,7 @@ header{
     min-height: 1.68rem;
     border: none;
     font-size: 0.28rem;
+    resize: none;
 }
 /* .practice_medicine input{
 	width: 5.5rem;
@@ -322,6 +324,7 @@ header{
     min-height: 1.68rem;
     border: none;
     font-size: 0.28rem;
+    resize: none;
 }
 .copyreader:empty:before{
 content: attr(placeholder);
