--- a/wechat/src/main/webapp/xcview/css/school_play.css
+++ b/wechat/src/main/webapp/xcview/css/school_play.css
@@ -452,7 +452,7 @@ margin-top: 0.1rem;
 .user_header{
 	width: 0.98rem;
 	height: 0.98rem;
-	background: skyblue;
+	background: #f8f8f8;
 	float: left;
 	border-radius: 50%;
 	margin-bottom: 0.2rem;
