--- a/online-web/src/main/webapp/web/css/index2.css
+++ b/online-web/src/main/webapp/web/css/index2.css
@@ -215,6 +215,7 @@ ul {
 .slider-container .selector span.cur {
 	height: 8px;
 	background-color: #2cb82c;
+	border-radius: 50%;
 }
 
 .slider-container #left,
