--- a/online-web/src/main/webapp/web/css/school/school-live.css
+++ b/online-web/src/main/webapp/web/css/school/school-live.css
@@ -68,9 +68,15 @@ a:hover{text-decoration: none;}
 .carousel-indicators li{
 	border: 0 !important;
 	background: white;
+	width: 10px;
+	height: 10px;
+	margin: 0 5px;
+	
 }
 .carousel-indicators .active{
 	background: #00BC12;
+	width: 10px;
+	height: 10px;
 }
 /*轮播箭头*/
 /*精品,免费,最新,养生课程*/
