无数据背景图

--- a/online-web/src/main/webapp/web/css/school/details-album.css
+++ b/online-web/src/main/webapp/web/css/school/details-album.css
@@ -169,7 +169,15 @@ padding-bottom: 10px;
 }
 
 
-
+.all-null{
+	text-align: center;
+	padding: 120px 0;
+	background: white;
+}
+.all-null p{
+	padding: 10px 0;
+	color: #999999;
+}
 
 
 .main{
