--- a/online-web/src/main/webapp/web/css/school/pay-recharge.css
+++ b/online-web/src/main/webapp/web/css/school/pay-recharge.css
@@ -31,6 +31,7 @@ p{margin-bottom: 0;}
 }
 .recharge-explain .explain span{
 	color: #999999;
+	margin-left: 10px;
 }
 .recharge-explain .balance{
 	color: #666666;
