--- a/online-web/src/main/webapp/web/fonts/style.css
+++ b/online-web/src/main/webapp/web/fonts/style.css
@@ -1,15 +1,15 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?95zkyx');
-  src:  url('fonts/icomoon.eot?95zkyx#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?95zkyx') format('truetype'),
-    url('fonts/icomoon.woff?95zkyx') format('woff'),
-    url('fonts/icomoon.svg?95zkyx#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?ghjkez');
+  src:  url('fonts/icomoon.eot?ghjkez#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?ghjkez') format('truetype'),
+    url('fonts/icomoon.woff?ghjkez') format('woff'),
+    url('fonts/icomoon.svg?ghjkez#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-i {
+[class^="icomoon-icon-"], [class*=" icomoon-icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: none;
@@ -28,55 +28,71 @@ i {
   content: "\e900";
 
 }
-.icomoon-icon-gonggao:before {
+.icomoon-icon-dongtai:before {
   content: "\e901";
 
 }
-.icomoon-icon-meiti:before {
+.icomoon-icon-gonggao:before {
   content: "\e902";
 
 }
-.icomoon-icon-shoutu:before {
+.icomoon-icon-huifu:before {
   content: "\e903";
 
 }
-.icomoon-icon-wenda:before {
+.icomoon-icon-meiti:before {
   content: "\e904";
 
 }
-.icomoon-icon-woshiyishi:before {
+.icomoon-icon-shoutu:before {
   content: "\e905";
 
 }
-.icomoon-icon-xuexi:before {
+.icomoon-icon-wenda:before {
   content: "\e906";
 
 }
-.icomoon-icon-yiguan:before {
+.icomoon-icon-woshiyishi:before {
   content: "\e907";
 
 }
-.icomoon-icon-yishirenzheng:before {
+.icomoon-icon-xuetang:before {
   content: "\e908";
 
 }
-.icomoon-icon-zhaopin:before {
+.icomoon-icon-xuexi:before {
   content: "\e909";
 
 }
-.icomoon-icon-zhuanlan:before {
+.icomoon-icon-yiguan:before {
   content: "\e90a";
 
 }
-.icomoon-icon-zhuzuo:before {
+.icomoon-icon-yishirenzheng:before {
   content: "\e90b";
 
 }
-.icomoon-icon-zichan:before {
+.icomoon-icon-zan:before {
   content: "\e90c";
 
 }
-.icomoon-icon-ziliao:before {
+.icomoon-icon-zhaopin:before {
   content: "\e90d";
+
+}
+.icomoon-icon-zhuanlan:before {
+  content: "\e90e";
+
+}
+.icomoon-icon-zhuzuo:before {
+  content: "\e90f";
+
+}
+.icomoon-icon-zichan:before {
+  content: "\e910";
+
+}
+.icomoon-icon-ziliao:before {
+  content: "\e911";
 
 }
