师承--行间距

--- a/wechat/src/main/webapp/xcview/css/apprentice/recruit.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/recruit.css
@@ -79,9 +79,11 @@ header{
 }
 .recruit p{
     font-size: 0.26rem;
+    line-height: 0.42rem;
 }
 .recruit div{
     font-size: 0.26rem;
+    line-height: 0.42rem;
 }
 .recruit span{
     font-size: 0.26rem;
