--- a/wechat/src/main/webapp/xcview/css/line_class.css
+++ b/wechat/src/main/webapp/xcview/css/line_class.css
@@ -94,11 +94,12 @@ header{
 	width: 100%;
 	height: 1.11rem;
 	background: #FFF1D0;
-	padding: 0.2rem 0.26rem;
+	padding: 0.2rem 0;
 }
 .main_hint_img{
 	float: left;
 	margin-right: 0.16rem;
+	margin-left: 0.26rem;
 }
 .main_hint div img{
 	width: 0.3rem;
