--- a/online-web/src/main/webapp/web/fonts/style.css
+++ b/online-web/src/main/webapp/web/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?ghjkez');
-  src:  url('fonts/icomoon.eot?ghjkez#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?ghjkez') format('truetype'),
-    url('fonts/icomoon.woff?ghjkez') format('woff'),
-    url('fonts/icomoon.svg?ghjkez#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?s0sw1q');
+  src:  url('fonts/icomoon.eot?s0sw1q#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?s0sw1q') format('truetype'),
+    url('fonts/icomoon.woff?s0sw1q') format('woff'),
+    url('fonts/icomoon.svg?s0sw1q#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
