--- a/online-web/src/main/webapp/web/css/school/details-album.css
+++ b/online-web/src/main/webapp/web/css/school/details-album.css
@@ -378,6 +378,7 @@ word-break:break-all;
 .operation-reply li{
 	float: left;
 	cursor: pointer;
+	color: #989898;
 }
 .operation-reply li:nth-child(2){
 	margin-left: 20px;
