修改--边框色值。

--- a/wechat/src/main/webapp/xcview/css/all_comment.css
+++ b/wechat/src/main/webapp/xcview/css/all_comment.css
@@ -97,7 +97,7 @@ margin-top: 0.1rem;
 	width: 100%;
 	background: white;
 	overflow: hidden;
-	    border-bottom: 1px solid #D8DDE6;
+	    border-bottom: 1px solid #f0f0f0;
 	    padding-top: 0.2rem;
 }
 
