--- a/wechat/src/main/webapp/xcview/css/live_select_aibum.css
+++ b/wechat/src/main/webapp/xcview/css/live_select_aibum.css
@@ -43,7 +43,7 @@ textarea::-webkit-input-placeholder {
 	line-height: 0.88rem;
 	overflow: hidden;
 	position: fixed;
-	border-bottom: 1px solid #d8dde6;	
+	border-bottom: 1px solid #D8DDE6;	
 	background: white;
 	z-index: 999999;
 }
@@ -197,7 +197,7 @@ overflow: hidden;
 	font-size: 0.26rem;
 	padding: 0.22rem 0;
 	width: 100%;
-    border-bottom: 1px solid #D8DDE6;
+    border-bottom: 1px solid #f0f0f0;
 }
 .playTimes{
 
@@ -229,7 +229,7 @@ overflow: hidden;
 	background: white;
 	/*text-align: center;*/
 	font-size: 0.28rem;
-	border-bottom: 1px solid #D8DDE6;
+	border-bottom: 1px solid #F0F0F0;
 	overflow: hidden;
 }
 .my_details li{
@@ -241,7 +241,7 @@ overflow: hidden;
 	float: right;
 	width: 0.01rem;
 	height: 0.4rem;
-	background: #D8DDE6;
+	background: #f0f0f0;
 }
 .my_details li span{
 	display: inline-block;
@@ -298,7 +298,7 @@ overflow: hidden;
 .limit_height ul li{
 	overflow: hidden;
     padding: 0.2rem 0 0.3rem;
-    border-bottom: 1px solid #D8DDE6;
+    border-bottom: 1px solid #f0f0f0;
     position: relative;
 }
 .limit_height ul li:nth-last-child(1){
@@ -353,7 +353,7 @@ overflow: hidden;
 .my_synopsis ul li p{
 	width: 0.6rem;
 	height: 1px;
-	background: #D8DDE6;
+	background: #f0f0f0;
 	margin-top: 0.2rem;
 }
 .my_synopsis ul .border{
@@ -404,7 +404,7 @@ word-break:break-all;
 	    text-align: center;
     background: white;
 	padding-bottom: 0.2rem;
-	border-bottom: 1px solid #D8DDE6;
+	border-bottom: 1px solid #f0f0f0;
 }
 .btn a{
 	display:inline-block;
@@ -493,7 +493,7 @@ word-break:break-all;
     text-align: center;
     background: white;
 	padding-bottom: 0.2rem;
-	border-bottom: 1px solid #D8DDE6;
+	border-bottom: 1px solid #f0f0f0;
 }
 .btn1 a{
 	display:inline-block;
@@ -547,7 +547,7 @@ margin-top: 0.1rem;
 	width: 100%;
 	background: white;
 	overflow: hidden;
-	    border-bottom: 1px solid #D8DDE6;
+	    border-bottom: 1px solid #f0f0f0;
 	    padding-top: 0.2rem;
 }
 .wrap_all_returned .wrap_people_comment:nth-last-child(1){
@@ -694,6 +694,10 @@ color: #666666;
 	padding: 0.01rem 0.26rem 0 0.26rem;
 	margin-top: 0.2rem;
 	box-sizing: border-box;
+	position: fixed;
+    bottom: 0;
+    left: 0;
+    border-top: 1px solid #f0f0f0;
 }
 .wrap_input{
 	width: 7rem;
@@ -939,7 +943,7 @@ color: #888888;
 	padding: 0 0.26rem 0.19rem;
 	box-sizing: border-box;
 	font-size: 0.18rem;
-	border-bottom: 1px solid #D8DDE6;
+	border-bottom: 1px solid #f0f0f0;
 }
 .list_box p{
 	float: left;
@@ -950,7 +954,7 @@ color: #888888;
 .line-xu{
 	width: 100%;
 	height: 0.01rem;
-	background: #D8DDE6;
+	background: #f0f0f0;
 }
 .all_list{
 	width: 100%;
@@ -960,7 +964,7 @@ color: #888888;
 }
 .all_list ul li{
 	padding: 0.19rem 0;
-	border-bottom: 1px solid #D8DDE6;
+	border-bottom: 1px solid #f0f0f0;
 	
 }
 .all_list ul li:nth-last-child(1){
